clang/test/BSC/Negative/Generic/StructAndFunction/call_member_func_fail/call_member_func_fail.cbs
// RUN: %clang_cc1 -verify %s

void int::increase(int* this) {
  *this += 1;
}


T foo<T>(T a) {
  int x = 2;
  x.increase();
  a.increase();         // expected-error{{no member named 'increase' in type 'float'}}
  return a + x;
}

int main() {
  float a = 5.1;
  int b = foo<float>(a);       // expected-note{{in instantiation of function template specialization 'foo<float>' requested here}}
  return 0;  
}